repo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounting-bot-svc
  namespace: accounting-bot
  labels:
    app: accounting-bot
spec:
  type: ClusterIP
  selector:
    app: accounting-bot
  ports:
    - name: http
      port: 3000
      targetPort: 3000
